[package]
name = "dnsdump"
version = "1.0.1"
edition = "2021"
author = "Ali"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
scraper = "0.13.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
reqwest = {version="0.11.10",features = ["blocking","json"] }
easy-scraper = "0.2.0"
cli-table = "0.4.7"
regex = "1.5.5"